--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         </div>
       </div>
     </section>
-    <section>
+    <section class="question-section">
       <div class="container">
         <div class="frequently">
           <div class="contant">
