--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </div>
       </div>
     </section>
-    <section>
+    <section class="features__section">
       <div class="container">
         <div class="features">
           <div class="contant">
@@ -110,7 +110,7 @@
         </div>
      
     </section>
-    <section class="download-section">
+    <section class="download__section">
       <div class="container">
         <div class="extension">
           <div class="contant">
@@ -147,7 +147,7 @@
         </div>
       </div>
     </section>
-    <section class="question-section">
+    <section class="question__section">
       <div class="container">
         <div class="frequently">
           <div class="contant">
