--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
             <p class="card__text">A clean and simple interface to organize your favourite websites. Open a new browser
               tab and see your sites load instantly. Try it for free.</p>
             <div class="card__btn-group btn-group">
-              <a class="btn-group__btn btn-group__btn-blue" href="https://www.google.com/chrome/" target="blank">Get it on Chrome</a>
-              <a class="btn-group__btn btn-group__btn-grey" href="https://www.mozilla.org" target="blank">Get it on Firefox</a>
+              <a class="btn-group__btn btn-group__btn--blue" href="https://www.google.com/chrome/" target="blank">Get it on Chrome</a>
+              <a class="btn-group__btn btn-group__btn--grey" href="https://www.mozilla.org" target="blank">Get it on Firefox</a>
             </div>
           </div>
         </div>
