--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -52,14 +54,14 @@
             <p class="card__text">A clean and simple interface to organize your favourite websites. Open a new browser
               tab and see your sites load instantly. Try it for free.</p>
             <div class="card__btn-group btn-group">
-              <a class="btn-group__btn btn-group__btn--blue" href="https://www.google.com/chrome/" target="blank">Get it on Chrome</a>
-              <a class="btn-group__btn btn-group__btn--grey" href="https://www.mozilla.org" target="blank">Get it on Firefox</a>
+              <a class="btn-group__btn btn-group__btn--blue" href="#">Get it on Chrome</a>
+              <a class="btn-group__btn btn-group__btn--grey" href="#">Get it on Firefox</a>
             </div>
           </div>
         </div>
       </div>
     </section>
-    <section class="features-section">
+    <section>
       <div class="container">
         <div class="features">
           <div class="contant">
@@ -69,13 +71,13 @@
           </div>
           <ul class="features__list features-list">
             <li class="features-list__item features-list__item--active">
-              <a class="features-list__btn " href="#">Simple Bookmarking</a>
+              <a class="features-list__btn " href="#sliders-one">Simple Bookmarking</a>
             </li>
             <li class="features-list__item">
-              <a class="features-list__btn" href="#">Speedy Searching</a>
+              <a class="features-list__btn" href="#sliders-tuo">Speedy Searching</a>
             </li>
             <li class="features-list__item">
-              <a class="features-list__btn" href="#">Easy Sharing</a>
+              <a class="features-list__btn" href="#sliders-three">Easy Sharing</a>
             </li>
           </ul>
          <div class="sliders sliders-active sliders-one" id="sliders-one">
@@ -108,9 +110,9 @@
           </div>
          </div>
         </div>
-     
+      </div>
     </section>
-    <section class="download-section">
+    <section>
       <div class="container">
         <div class="extension">
           <div class="contant">
@@ -147,7 +149,7 @@
         </div>
       </div>
     </section>
-    <section class="question-section">
+    <section>
       <div class="container">
         <div class="frequently">
           <div class="contant">
@@ -272,9 +274,8 @@ we’re doing
     </div>
   </footer>
 
-
-      
-
+  <script src="./js/main.js">
+  </script>
 </body>
 
 </html>
